<resources>
    <string name="app_name">Restaurant Tracker</string>

    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_main" translatable="false">Restaurant List</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_detail_list">Detail List</string>
    <string name="title_activity_restaurant_list" translatable="false">Restaurant List</string>
    <string name="id" translatable="false">ID</string>
    <string name="hello_world">Hello world!</string>

    <string name="idString">The id is</string>
    <string name="action_search">Search</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check Updates</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>


    <string name="cancel">Cancel</string>

    <string name="enter_name">Enter Name</string>
    <string name="enter_address">Enter Street Address</string>
    <string name="enter_address2">Enter City, State Zip</string>
    <string name="enter_phone">Enter Phone</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hr_title">Highest Rated Restaurant</string>
</resources>