<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.cuny.citytech.restauranttracker.EditResFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/row_id"
        android:layout_alignBottom="@+id/edit_ratingBar"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/edit_ratingBar"
        android:visibility="invisible"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_name"
        android:layout_alignBottom="@+id/edit_ratingBar"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/edit_ratingBar"
        android:hint="@string/enter_name" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_ratingBar"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_address1"
        android:layout_below="@+id/edit_ratingBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_address" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_address2"
        android:layout_below="@+id/edit_address1"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/edit_ratingBar"
        android:hint="@string/enter_address2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edit_phone"
        android:layout_below="@+id/edit_address2"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/edit_ratingBar"
        android:hint="@string/enter_phone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/edit_button"
        android:onClick="editRes"
        android:layout_below="@+id/edit_phone"
        android:layout_alignParentStart="true"
        android:width="190dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel_button"
        android:onClick="cancelRes"
        android:width="190dp"
        android:layout_alignTop="@+id/edit_button"
        android:layout_toEndOf="@+id/edit_button" />

</RelativeLayout>
